--- a/client/pom.xml
+++ b/client/pom.xml
@@ -21,7 +21,15 @@
 	</repositories>
 
 	<dependencies>
+	
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>11.0</version>
+		</dependency>
+	
+		<dependency>
+		
 			<groupId>com.mashape.unirest</groupId>
 			<artifactId>unirest-java</artifactId>
 			<version>1.3.8</version>
